# PX4_Snapdragon

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
NuttX/: CMakeLists.txt  nuttx_tools.cmake
ROMFS/px4fmu_common/init.d/: 4070_aerofc  4900_crazyflie  rc.sensors  rcS
Tools/: px_process_params.py
Tools/px4airframes/: markdownout.py
Tools/px4params/: srcscanner.py
cmake/common/: px4_base.cmake
cmake/configs/: nuttx_aerocore2_default.cmake  nuttx_aerofc-v1_default.cmake  nuttx_auav-x21_default.cmake  nuttx_esc35-v1_bootloader.cmake  nuttx_esc35-v1_default.cmake  nuttx_mindpx-v2_default.cmake  nuttx_px4cannode-v1_bootloader.cmake  nuttx_px4cannode-v1_default.cmake  nuttx_px4esc-v1_bootloader.cmake  nuttx_px4esc-v1_default.cmake  nuttx_px4flow-v2_bootloader.cmake  nuttx_px4fmu-v1_default.cmake  nuttx_px4fmu-v2_default.cmake  nuttx_px4fmu-v2_test.cmake  nuttx_px4fmu-v3_default.cmake  nuttx_px4fmu-v4_default.cmake  nuttx_px4fmu-v4pro_default.cmake  nuttx_px4fmu-v5_default.cmake  nuttx_px4nucleoF767ZI-v1_default.cmake  nuttx_s2740vc-v1_bootloader.cmake  nuttx_tap-v1_default.cmake  nuttx_zubaxgnss-v1_bootloader.cmake  posix_rpi_common.cmake  posix_sitl_default.cmake
cmake/nuttx/: px4_impl_nuttx.cmake
cmake/posix/: px4_impl_posix.cmake
cmake/qurt/: px4_impl_qurt.cmake
cmake/toolchains/: Toolchain-arm-none-eabi.cmake
config_files/: px4.config
launch/: multi_uav_mavros_sitl.launch  single_vehcile_spawn.launch
msg/: CMakeLists.txt
nuttx-configs/aerocore/nsh/: defconfig
nuttx-configs/aerofc-v1/nsh/: defconfig
nuttx-configs/auav-x21/nsh/: defconfig
nuttx-configs/crazyflie/nsh/: defconfig
nuttx-configs/mindpx-v2/nsh/: defconfig
nuttx-configs/px4-stm32f4discovery/nsh/: defconfig
nuttx-configs/px4fmu-v1/nsh/: defconfig
nuttx-configs/px4fmu-v2/nsh/: defconfig
nuttx-configs/px4fmu-v3/nsh/: defconfig
nuttx-configs/px4fmu-v4/nsh/: defconfig
nuttx-configs/px4fmu-v4pro/nsh/: defconfig
nuttx-configs/px4fmu-v5/include/: board.h
nuttx-configs/px4fmu-v5/nsh/: defconfig
nuttx-configs/px4nucleoF767ZI-v1/nsh/: defconfig
nuttx-configs/tap-v1/nsh/: defconfig
posix-configs/rpi/: px4.config  px4_fw.config
src/drivers/: drv_pwm_output.h
src/drivers/bmi055/: bmi055_accel.cpp  bmi055_gyro.cpp
src/drivers/bmi160/: bmi160.cpp  bmi160_main.cpp
src/drivers/bmp280/: bmp280.cpp
src/drivers/boards/aerofc-v1/: aerofc_init.c  board_config.h
src/drivers/boards/auav-x21/: board_config.h
src/drivers/boards/common/: board_common.h  board_crashdump.c
src/drivers/boards/crazyflie/: crazyflie_init.c
src/drivers/boards/esc35-v1/bootloader/: CMakeLists.txt
src/drivers/boards/px4cannode-v1/bootloader/: CMakeLists.txt
src/drivers/boards/px4esc-v1/bootloader/: CMakeLists.txt
src/drivers/boards/px4flow-v2/bootloader/: CMakeLists.txt
src/drivers/boards/px4fmu-v2/: board_config.h  px4fmu2_init.c  px4fmu_spi.c
src/drivers/boards/px4fmu-v4/: board_config.h  px4fmu_init.c
src/drivers/boards/px4fmu-v4pro/: board_config.h  px4fmu_init.c
src/drivers/boards/px4fmu-v5/: board_config.h  px4fmu_init.c  px4fmu_spi.c
src/drivers/boards/px4nucleoF767ZI-v1/: px4nucleo_spi.c
src/drivers/boards/s2740vc-v1/bootloader/: CMakeLists.txt
src/drivers/boards/tap-v1/: tap_init.c  tap_pwr.c
src/drivers/boards/zubaxgnss-v1/bootloader/: CMakeLists.txt
src/drivers/gps/: gps.cpp
src/drivers/lps25h/: lps25h_spi.cpp
src/drivers/lsm303d/: lsm303d.cpp
src/drivers/meas_airspeed/: meas_airspeed.cpp
src/drivers/mpu6000/: mpu6000_spi.cpp
src/drivers/mpu9250/: mpu9250_spi.cpp
src/drivers/ms5525_airspeed/: MS5525.cpp  MS5525.hpp  MS5525_main.cpp
src/drivers/px4fmu/: fmu.cpp
src/drivers/stm32/: drv_io_timer.c
src/firmware/nuttx/: CMakeLists.txt
src/lib/version/: CMakeLists.txt  version.c
src/modules/commander/: commander.cpp  state_machine_helper.cpp
src/modules/dataman/: dataman.c  dataman.cpp  dataman.h
src/modules/ekf2/: ekf2_main.cpp  ekf2_params.c
src/modules/iekf/: IEKF.cpp  IEKF.hpp  Sensor.hpp  constants.hpp  params.c
src/modules/iekf/corrections/: gps.cpp  vision.cpp
src/modules/land_detector/: FixedwingLandDetector.cpp  LandDetector.cpp  LandDetector.h  MulticopterLandDetector.cpp  RoverLandDetector.cpp  VtolLandDetector.cpp  land_detector_main.cpp
src/modules/local_position_estimator/sensors/: mocap.cpp
src/modules/logger/: logger.cpp  logger.h
src/modules/mavlink/: mavlink_main.cpp  mavlink_main.h  mavlink_mission.cpp  mavlink_receiver.cpp
src/modules/mc_pos_control/: mc_pos_control_main.cpp
src/modules/navigator/: follow_target.cpp  geofence.cpp  geofence.h  loiter.cpp  mission.cpp  mission_block.cpp  mission_feasibility_checker.cpp  navigator.h  navigator_main.cpp  rtl.cpp
src/modules/px4iofirmware/: CMakeLists.txt
src/modules/replay/: replay.hpp  replay_main.cpp
src/modules/sensors/: parameters.cpp  sensors.cpp
src/modules/systemlib/: CMakeLists.txt  hardfault_log.h  system_params.c
src/modules/uORB/: Subscription.hpp
src/systemcmds/hardfault_log/: hardfault_log.c
src/systemcmds/mtd/: mtd.c
src/systemcmds/param/: CMakeLists.txt
src/systemcmds/pwm/: CMakeLists.txt  pwm.c  pwm.cpp
src/systemcmds/usb_connected/: usb_connected.c
